Revert "Reduce max allowed memory size"
This reverts commit 544e029b388c51be247db51e8e9b7c3c578c8782.